@@ -6,7 +6,7 @@ from typing import Literal
 from datetime import datetime
 
 import reusables
-from appdirs import user_data_dir
+from platformdirs import user_data_dir
 from pathvalidate import sanitize_filename
 
 from fastflix.command_runner import BackgroundRunner
