@@ -24,7 +24,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dynamic = ["version"]
 dependencies = [
-    "appdirs~=1.4",
+    "platformdirs~=4.3",
     "chardet>=5.1.0,<5.2.0",
     "colorama>=0.4,<1.0",
     "coloredlogs>=15.0,<16.0",
