@@ -4,7 +4,9 @@
 
 * Adding global disable interlace check (thanks to Wontell)
 * Changing profile bitrate selector to be text field (thanks to Wontell)
-
+* Fixing #637 saving temp files for seven days to allow for better debug and recovery (thanks to marillat)
+* Fixing #638 switching archived library appdirs to maintained platformdirs (thanks to marillat)
+* Fixing x265 passlog file name was not being applied properly
 
 ## Version 5.9.0
 
@@ -17,7 +19,6 @@
 * Fixing #628 Custom QP/CRF saved in profile may not be restored correctly (thanks to Gregorio O. DeMojeca)
 * Fixing #631 VVC Level can't be set to 0 anymore (thanks to GT500org)
 * Removing Ubuntu 20.04, 22.04 and Mac 12 builds
-
 
 ## Version 5.8.2
 
